--- a/html_css/index.html
+++ b/html_css/index.html
@@ -12,22 +12,24 @@
 				<a href="#"></a>
 			</h1>
 			<ul id="side-menu">
-				<li><a href="#">O NAMA</a></li>
-				<li><a href="#">KVALITET</a></li>
-				<li><a href="#">NARUČIVANJE</a></li>
+				<li><a href="#">o nama</a></li>
+				<li><a href="#">kvalitet</a></li>
+				<li><a href="#">naručivanje</a></li>
 			</ul>
 
 			<ul id="main-menu">
-				<li><a href="#">LICE</a></li>
-				<li><a href="#">OČI</a></li>
-				<li><a href="#">USNE</a></li>
-				<li><a href="#">KOSA</a></li>
-				<li><a href="#">RUKE I NOKTI</a></li>
-				<li><a href="#">TELO</a></li>
-				<li><a href="#">NOGE</a></li>
-				<li><a href="#">NEGA</a></li>
+				<li><a href="#">lice</a></li>
+				<li><a href="#">oči</a></li>
+				<li><a href="#">usne</a></li>
+				<li><a href="#">kosa</a></li>
+				<li><a href="#">ruke i nokti</a></li>
+				<li><a href="#">telo</a></li>
+				<li><a href="#">noge</a></li>
+				<li><a href="#">nega</a></li>
 			</ul>
 		</header>
 	</div>
+	<div id="content"></div>
+		
 </body>		
 </html>			
