--- a/html_css/index.html
+++ b/html_css/index.html
@@ -28,8 +28,8 @@
 				<li><a href="#">nega</a></li>
 			</ul>
 		</header>
+		<div id="content">
+		</div>
 	</div>
-	<div id="content"></div>
-		
 </body>		
 </html>			
