--- a/html_css/index.html
+++ b/html_css/index.html
@@ -11,6 +11,11 @@
 			<h1>
 				<a href="#"></a>
 			</h1>
+			<div id="social">
+				<h2>Pratite nas na</h2>
+				<a href="#" class="facebook">facebook</a>
+				<a href="#" class="twitter">twitter</a>
+			</div>
 			<ul id="side-menu">
 				<li><a href="#">o nama</a></li>
 				<li><a href="#">kvalitet</a></li>
