--- a/html_css/index.html
+++ b/html_css/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+	<div id="top-background">
+	</div>
 	<div id="wrapper">
 		<header>
 			<h1>
